# vibecut-app

./: .gitignore  package-lock.json  package.json  vite.config.ts
scripts/: add_subtitles.py  analyze_auto_edit.py  capcut_editor.py  export_bridge.py  package_runtime.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/components/: ExportPanel.tsx  SceneCard.tsx  SceneDocList.tsx  SceneDrawer.tsx  SceneList.tsx  SceneSubtitleEditor.tsx  SceneThumbnail.tsx  SceneTokenRail.tsx  VideoPreview.tsx  WordToken.tsx  WordWaveformEditor.tsx
src/hooks/: usePlaybackSync.ts  useProjectAutosave.ts  useVideoPipeline.ts
src/lib/: autoEdit.ts  exportCapcut.ts  persistence.ts  segmentCompiler.ts  timeFormat.ts
src/state/: projectStore.ts  transcriptStore.ts  videoStore.ts
src/styles/: tokens.css
src/types/: index.ts
