[package]
name = "aside"
version = "0.1.0"
description = "aside — macOS 자막 기반 영상 편집기"
authors = []
license = ""
repository = ""
default-run = "aside"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "aside"
path = "src/main.rs"

[lib]
name = "aside_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
